# confidence_localization

./: LICENSE  Makefile  README.md  dockerfile  pyproject.toml  requirements.txt
confidence_localization/: LICENSE  dockerfile  requirements.txt  train.py
confidence_localization/confidence_localization/modeling/: train.py
